--- a/RAG_gemini.ipynb
+++ b/RAG_gemini.ipynb
@@ -32,7 +32,7 @@
     "# from dotenv import load_dotenv\n",
     "# load_dotenv()\n",
     "# api_key = os.getenv(\"GEMINI_API_KEY\")\n",
-    "api_key = \"AIzaSyCG-ENv0cYhJWIc-6myIL6iYp-Ai_82k2k\""
+    "api_key = \"\""
    ]
   },
   {
